--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
                 <!-- Brand/logo -->
                 <a href="/index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <!-- Replace SVG with Bootstrap Icon -->
-                    <img src="./Assets/images/logo.png" class="heading" alt="RES Logo" height="50px">
+                    <img src="Assets/images/logo.png" class="heading" alt="RES Logo" height="50px">
                     <span class="fs-4 heading">RES Portal</span>
                 </a>
 
                 <!-- Navigation -->
                 <ul class="nav nav-pills">
                     <li class="nav-item"><a href="#" class="nav-link active" onclick="scrollToTop()" aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="/aboutme.html" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="aboutme.html" class="nav-link">About</a></li>
                 </ul>
             </header>
         </div>
@@ -133,7 +133,7 @@
 
         <!-- Hero Section -->
         <section class="container text-center py-5">
-            <img src="/Assets/images/logo.png" alt="CCS Logo" width="200" height="200" class="mb-4">
+            <img src="Assets/images/logo.png" alt="CCS Logo" width="200" height="200" class="mb-4">
             <h1 class="display-5 fw-bold">RES Portal</h1>
             <p class="lead mb-4">Welcome to the RES Portal. Explore all the features offered by our Engineer Ahmed Aly.</p>
             <button class="btn btn-primary btn-lg" onclick="window.location.href='mailto:ahmed@goccs.net?subject=Feature Request&body=I would like to request the following feature:';">Ask for Feature</button>
@@ -186,7 +186,7 @@
             <ul class="nav col-md-4 justify-content-end">
             <li class="nav-item"><a href="#"onclick="scrollToTop()" class="nav-link px-2 text-body-secondary">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-            <li class="nav-item"><a href="/aboutme.html" class="nav-link px-2 text-body-secondary">About</a></li>
+            <li class="nav-item"><a href="aboutme.html" class="nav-link px-2 text-body-secondary">About</a></li>
             </ul>
             <ul class="styled-list">
                 <li>Ahmed </li>
