--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <!-- Brand/logo -->
                 <a href="/index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <!-- Replace SVG with Bootstrap Icon -->
-                    <img src="Assets/images/logo.png" class="heading" alt="RES Logo" height="50px">
+                    <img src="Assets/images/Logo.png" class="heading" alt="RES Logo" height="50px">
                     <span class="fs-4 heading">RES Portal</span>
                 </a>
 
@@ -133,7 +133,7 @@
 
         <!-- Hero Section -->
         <section class="container text-center py-5">
-            <img src="Assets/images/logo.png" alt="CCS Logo" width="200" height="200" class="mb-4">
+            <img src="Assets/images/Logo.png" alt="RES Logo" width="200" height="200" class="mb-4">
             <h1 class="display-5 fw-bold">RES Portal</h1>
             <p class="lead mb-4">Welcome to the RES Portal. Explore all the features offered by our Engineer Ahmed Aly.</p>
             <button class="btn btn-primary btn-lg" onclick="window.location.href='mailto:ahmed@goccs.net?subject=Feature Request&body=I would like to request the following feature:';">Ask for Feature</button>
@@ -180,7 +180,7 @@
             <p class="col-md-4 mb-0 text-body-secondary">© 2024 RES Inc</p>
         
             <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <img src="Assets/images/logo.png" height="40px">
+            <img src="Assets/images/Logo.png" height="40px">
             </a>
         
             <ul class="nav col-md-4 justify-content-end">
