--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <a href="https://campain-inputer.streamlit.app/" onclick="scrollToTop()">campaign input</a>
             <a href="https://suprasor.streamlit.app/" onclick="scrollToTop()">Scrapper</a>
             <a href="https://res-supresor.streamlit.app/" onclick="scrollToTop()">Suppressor</a>
-            <a href="/aboutme.html">About</a>
+            <a href="aboutme.html">About</a>
             <a href="mailto:ahmed@goccs.net">Contact</a>
         </nav>
     </div>
