--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
                 <button id="hamburger-btn" onclick="toggleSidebar()">&#9776;</button>
                 <!-- Brand/logo -->
-                <a href="/index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <!-- Replace SVG with Bootstrap Icon -->
                     <img src="Assets/images/Logo.png" class="heading" alt="RES Logo" height="50px">
                     <span class="fs-4 heading">RES Portal</span>
