--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
             <li class="nav-item"><a href="aboutme.html" class="nav-link px-2 text-body-secondary">About</a></li>
             </ul>
             <ul class="styled-list">
-                <li>Ahmed </li>
+                <li>Diaa Head of Data</li>
+                <li>Ahmed Engineer</li>
             </ul>
         </footer>
     </div>
