--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <img src="Assets/images/united-states-postal-service.svg" alt="Sheriff Bot" class="mb-3" style="height: 70px;">
                             <h5 class="card-title">Standradizer</h5>
                             <p class="card-text">This tool is designed for the use of REI-sift all files should pass through it before being uploaded to REI to avoid any duplicates in the future and maintaining a USPS format.</p>
-                            <a href="https://res-supresor.streamlit.app/" class="btn btn-outline-primary">Explore</a>
+                            <a href="https://standradizer.streamlit.app/" class="btn btn-outline-primary">Explore</a>
                         </div>
                     </div>
                 </div>
